update .gitignore to include additional ignored files and folders

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,9 @@ env/
 # Data files (if large, you might not want to commit raw data)
 data/*.csv
 data/*.parquet
+
+# macOS
+.DS_Store
+
+# Visual Studio Code
 .vscode/
